--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container{
+ margin-top: 20px!important;
+}
 .dislike{
   
   font-size: 60px;
