--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,55 @@ code {
 
   
 }
+.card{
+  width: 24%!important;
+}
+
+.menu{
+  opacity: .5!important;
+}
+
+.nav-menu{
+  background-color: black!important;
+}
+
+.buscador-banner{
+  width: 100%;
+  height: 300px;
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)
+  ),
+  url('https://images.unsplash.com/photo-1615828700429-12144f98604f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80');
+  background-position: center center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.buscador{
+
+  border-radius: 12px!important;
+  padding: 12px!important;
+}
+body{
+  background-color: #EEEEEE!important;
+}
+
+.footer{
+  background-color: black;
+  height: 100px;
+  color: white;  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+ .card{
+     
+     box-shadow: 2px 10px 15px -3px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1)!important;
+
+    }
+    .msg-error{
+  
+    }
